[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/scenes/blocks/Cell.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scenes/blocks/Block.gd" type="Script" id=2]

[node name="Block" type="Node2D" groups=[
"Block",
]]
script = ExtResource( 2 )

[node name="Cell" parent="." instance=ExtResource( 1 )]

[node name="Cell2" parent="." instance=ExtResource( 1 )]

[node name="Cell3" parent="." instance=ExtResource( 1 )]

[node name="Cell4" parent="." instance=ExtResource( 1 )]

[node name="MoveTween" type="Tween" parent="."]
